crates/ascribe-emit/tests/snapshots/site_quill__site-cloud-keys-md.snap
---
source: crates/ascribe-emit/tests/site_quill.rs
expression: text
---
---
title: API keys
description: Create and rotate the API keys the Quill agent uses.
---

## Create a key <ascribe-attributes id="create-key"></ascribe-attributes>

Sign in to Quill Cloud and open **Settings → Keys**.

## Rotate keys <ascribe-attributes id="rotate-keys"></ascribe-attributes>

Generate a new key, put it in `quill.yaml`, and restart the agent. To install the agent first, see [Install the agent](/install-agent/#install-agent).
