crates/ascribe-emit/tests/snapshots/site_quill__site-site-_ascribe-schema-ts.snap
---
source: crates/ascribe-emit/tests/site_quill.rs
expression: text
---
// Generated by `ascribe build --emit site` from ascribe.toml. Don't edit it:
// change the content model and build again.
//
// The Zod schemas of the frontmatter in the site output, for an Astro content
// collection's `schema`. Written for Astro 7.3 (Zod 4, from `astro/zod`).

import { z } from "astro/zod";

/** One target of a page's availability: the attributes of a
 * `<ascribe-availability-target>`, and the text it shows. */
export const availableTargetSchema = z.strictObject({
  target: z.string(),
  dimension: z.string(),
  states: z.array(z.string()),
  versions: z.array(z.string()).optional(),
  text: z.string(),
});

/** A page's availability, for a layout to show with
 * `<ascribe-availability scope="page">`. */
export const availableSchema = z.array(availableTargetSchema);
export type Available = z.infer<typeof availableSchema>;

/** The dimension values a page applies to (SPEC §4.3). */
export const variantSchema = z.record(
  z.string(),
  z.union([z.string(), z.array(z.string())]),
);
export type Variant = z.infer<typeof variantSchema>;

/** The frontmatter of pages of type `page`. */
export const pageSchema = z.strictObject({
  title: z.string(),
  description: z.string().optional(),
  available: availableSchema.optional(),
  variant: variantSchema.optional(),
});
export type Page = z.infer<typeof pageSchema>;

/** Every content type's schema, by the type's name. */
export const schemas = {
  page: pageSchema,
} as const;

/** Which pages each content type applies to. */
export const contentTypes = {
  page: { default: true, files: [] },
} as const;

/** A schema that accepts the frontmatter of any content type. */
export const schema = pageSchema;
